syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

package proto;

option go_package = ".;proto";

message Event {
  string id = 1;
  string title = 2;
  string userID = 3;
  google.protobuf.Timestamp datetimestart = 4;
  google.protobuf.Duration duration = 5; 
  google.protobuf.Timestamp alarmtime = 7;
}

message CreateEventResponse {
    string id = 1;
}

message DeleteEventRequest {
    string id = 1;
}

message ListEventsRequest {
    string userID = 1;
    string datetimestart = 3;
}

message Events {
    repeated Event events = 1;
}

service EventService {
	rpc CreateEvent(Event) returns (CreateEventResponse) {}
	rpc UpdateEvent(Event) returns (google.protobuf.Empty) {}
	rpc DeleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {}
	rpc ListEventsDay(ListEventsRequest) returns (Events) {}
	rpc ListEventsWeek(ListEventsRequest) returns (Events) {}
	rpc ListEventsMonth(ListEventsRequest) returns (Events) {}
}